--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,13 @@ name = "pypi"
 [packages]
 djangorestframework = "*"
 django = "*"
+django-simple-history = "*"
+djoser = "*"
+djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
+drf-spectacular = "*"
+drf-spectacular-sidecar = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
