--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-cors-headers = "*"
 drf-spectacular = "*"
 drf-spectacular-sidecar = "*"
 python-dotenv = "*"
+pillow = "*"
 
 [dev-packages]
 
