--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ drf-spectacular = "*"
 drf-spectacular-sidecar = "*"
 python-dotenv = "*"
 pillow = "*"
+drf-extra-fields = "*"
 
 [dev-packages]
 
